// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSection - Snapshots > matches snapshot with custom classNames 1`] = `
<div
  class="flex w-full flex-col items-start justify-start gap-3"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    aria-level="4"
    class="text-xl leading-7"
    data-level="4"
    data-size="md"
    data-testid="heading"
    role="heading"
  >
    Account Settings
  </div>
  <p
    class="text-base leading-6 font-medium text-secondary-foreground"
    data-size="md"
    data-testid="typography"
  >
    Manage your account preferences and security settings.
  </p>
  <button
    data-size="default"
    data-testid="button"
    data-variant="secondary"
    id="edit-account-btn"
  >
    <svg
      data-size="16"
      data-testid="mock-button-icon"
    >
      <title>
        Mock Button Icon
      </title>
    </svg>
    Edit Account
  </button>
</div>
`;

exports[`SettingsSection - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex w-full flex-col items-start justify-start gap-3"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    aria-level="4"
    class="text-xl leading-7"
    data-level="4"
    data-size="md"
    data-testid="heading"
    role="heading"
  >
    Account Settings
  </div>
  <p
    class="text-base leading-6 font-medium text-secondary-foreground"
    data-size="md"
    data-testid="typography"
  >
    Manage your account preferences and security settings.
  </p>
  <button
    data-size="default"
    data-testid="button"
    data-variant="secondary"
    id="edit-account-btn"
  >
    <svg
      data-size="16"
      data-testid="mock-button-icon"
    >
      <title>
        Mock Button Icon
      </title>
    </svg>
    Edit Account
  </button>
</div>
`;

exports[`SettingsSection - Snapshots > matches snapshot with destructive variant 1`] = `
<div
  class="flex w-full flex-col items-start justify-start gap-3"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    aria-level="4"
    class="text-xl leading-7"
    data-level="4"
    data-size="md"
    data-testid="heading"
    role="heading"
  >
    Account Settings
  </div>
  <p
    class="text-base leading-6 font-medium text-secondary-foreground"
    data-size="md"
    data-testid="typography"
  >
    Manage your account preferences and security settings.
  </p>
  <button
    data-size="default"
    data-testid="button"
    data-variant="destructive"
    id="edit-account-btn"
  >
    <svg
      data-size="16"
      data-testid="mock-button-icon"
    >
      <title>
        Mock Button Icon
      </title>
    </svg>
    Edit Account
  </button>
</div>
`;

exports[`SettingsSection - Snapshots > matches snapshot with disabled button 1`] = `
<div
  class="flex w-full flex-col items-start justify-start gap-3"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    aria-level="4"
    class="text-xl leading-7"
    data-level="4"
    data-size="md"
    data-testid="heading"
    role="heading"
  >
    Account Settings
  </div>
  <p
    class="text-base leading-6 font-medium text-secondary-foreground"
    data-size="md"
    data-testid="typography"
  >
    Manage your account preferences and security settings.
  </p>
  <button
    data-size="default"
    data-testid="button"
    data-variant="secondary"
    disabled=""
    id="edit-account-btn"
  >
    <svg
      data-size="16"
      data-testid="mock-button-icon"
    >
      <title>
        Mock Button Icon
      </title>
    </svg>
    Edit Account
  </button>
</div>
`;
